feat: implement hero banner management backend
- Add HeroBanner entity and database mapping
- Add HeroBanner repository for database operations
- Add HeroBanner service layer for business logic
- Add HeroBanner controller and REST APIs
- Implement hero banner CRUD operations
- Add create, update, delete and fetch hero banner functionality
- Add hero banner ordering and active status management
- Add image URL and Cloudinary integration support
- Add request and response DTOs for hero banners
- Add validation for hero banner data
- Add proper exception handling for hero banner operations
- Update authentication and authorization for admin APIs
- Secure hero banner management endpoints for authorized admins
- Add API support for active hero banners on the public website
- Improve backend structure following controller-service-repository architecture